# transcribe-cloud-fuction

./: .coveragerc  .env.template  .env.yaml.template  .gcloudignore  .gitignore  .gitlab-ci.yml  .gitlab-mr.sh  .isort.cfg  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  deploy-production.sh  deploy-staging.sh  main.py  pyproject.toml  setup.cfg
tests/: test_main.py
